src/pages/Home.css
:root {
    --ion-color-dream: 	#BF40BF;
    --ion-color-dream-rgb: 167, 12, 214;
}

.ion-color-dream {
    --ion-color-base: var(--ion-color-dream);
    --ion-color-base-rgb: var(--ion-color-dream-rgb);
}

/* The CSS for the app */

.page-background {
    --background: url('../images/starbackground.jpg') 0 0/100% 100% no-repeat!important;
}

.back-track {
    color: rgb(167, 12, 214);
    align-self: left;
    display: flex;
}

.back-2-home {
    align-self: right;
    font-size: small;
    color: rgb(167, 12, 214);
    display: flex;
}

.header {
    display: flex;
}

.title-bar {
    font-size: large;
    display: flex;
    align-self: center;
    color: rgb(167, 12, 214);
}

.big-button {
    --background: var(--dream, #BF40BF);
    display: flex;
    font-size: xx-large;
    color: black;
    margin: 1em;
    --ion-font-family: times;
}

.footer-content {
    margin-top: 2em;
    text-align: center;
    color: white;
    /* background-color: rgb(167, 12, 214); (Leave as is for now) */
}

/* For Journal - New Entries: */

.tabs {
    color: #ff44ff;
    margin-left: auto;
    margin-right: auto;
    background-color: black;
    font-family: monospace;
}

.add-button {
    --background: var(--dream, #BF40BF);
    border: #BF40BF;
    border-radius: 50%;
    width: 14.4mm;
    height: 14.4mm;
    text-decoration: none;
    display: inline-block;
}

.journal-title {
    font-family: monospace;
    color: black;
}

.journal-title .star-button {
    height: fit-content;
    width: fit-content;
    max-width: 70px;
}

.journal-entry {
    color: black;
}

.journal-tags {
color: black;
font-family: monospace;
}

/* This applies to other pages as well: */
.footer-content .big-button {
    position: fixed;
    bottom: 0;
    width: 56%;
    margin-left: 22%;
    margin-right: 22%;
    margin-bottom: 0;
}

/* For Journal - Dream Signs: */

.context-action {
    color: #ff44ff;
    background-color: black;
    margin-left: 3%;
    margin-right: 3%;
}

.dream-sign-info {
    color: black;
}

/* For Alarm - Custom Alarms: */
@media  (max-height: 714px) {
    .media-screen-body {
        max-height: 500px;
        overflow: auto;
    }
}

/* For Upload Alarm Sound */

.audio-title {
    background: #BF40BF;
    text-align: center;
    padding-top: .25em;
    padding-bottom: .25em;
}

.small-button {
    --background: var(--dream, #BF40BF);
    display: flex;
    font-size: x-large;
    color: black;
    margin: .5em;
    --ion-font-family: times;
}

